--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ html::-webkit-scrollbar-thumb{
     font-size: 2rem;
     text-decoration: underline;
 }
+
 .about .row{
     display: flex;
     align-items: center;
@@ -543,4 +544,11 @@ img {
     padding: 10px;
     text-align: center;
 }
-
+video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 100%;
+    max-height: 100%;
+    z-index: -100;
+}
